<resources>
    <string name="app_name">MMbeenz</string>
    <string name="signup_btn_label">Signup</string>
    <string name="login_btn_label">Login</string>
    <string name="homepage_title">Meow Meow Beenz</string>
    <string name="dummyText">android:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
        android:layout_widthandroid:layout_widthandroid:layout_width\nandroid:layout_widthandroid:layout_widthandroid:layout_width
    </string>
    <string name="username_hint">Enter username</string>
    <string name="password_hint">Enter password</string>
    <string name="Font1">casual</string>
    <string name="meowmeowbeenz">meowmeowbeenz</string>
    <string name="loginText">Login</string>
    <string name="signupText">SignUp</string>
    <string name="title_activity_homepage">Homepage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="upload_image">upload image</string>
    <string name="select_avatar">Select Avatar</string>
    <string name="submit_rating">Submit rating</string>
</resources>