<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".SignupActivity"
    android:background="@drawable/app_background"
    >

    <EditText
        android:id="@+id/username_text"
        android:layout_width="@dimen/center_text_input"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:fontFamily="@string/Font1"
        android:hint="@string/username_hint"
        android:textSize="@dimen/genericTextSize"
        android:inputType="textPersonName"
        android:textStyle="bold"
        android:padding="20dp"
        android:textAlignment="center"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="@dimen/center_text_input"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:fontFamily="@string/Font1"
        android:hint="@string/password_hint"
        android:textSize="@dimen/genericTextSize"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:padding="20dp"
        android:textAlignment="center"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="@dimen/center_text_input"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/login_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:fontFamily="@string/Font1"
            android:padding="@dimen/button_padding"
            android:text="@string/loginText"
            android:textSize="@dimen/font1Size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signup_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:padding="@dimen/button_padding"
            android:text="@string/signupText"
            android:fontFamily="@string/Font1"
            android:textSize="@dimen/font1Size"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>